fixing progress related bugs
